--- a/index.html
+++ b/index.html
@@ -3,7 +3,36 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dr. Mahdee Jodayree</title>
+  <title>Dr. Mahdee Jodayree — Personal Academic Homepage</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Personal academic homepage of Dr. Mahdee Jodayree, PhD in Computer Science from McMaster University. Research areas: Federated Learning, Cloud Computing, Cybersecurity, Distributed Systems. Teaching expertise: ML, Networks, Discrete Mathematics, Data Structures, SDLC.">
+  <meta name="robots" content="index, follow">
+
+  <!-- Schema.org Person (basic) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Dr. Mahdee Jodayree",
+    "affiliation": {
+      "@type": "CollegeOrUniversity",
+      "name": "McMaster University",
+      "department": "Department of Computing & Software",
+      "address": { "@type": "PostalAddress", "addressLocality": "Hamilton", "addressRegion": "ON", "addressCountry": "Canada" }
+    },
+    "alumniOf": [
+      {"@type":"CollegeOrUniversity","name":"McMaster University"},
+      {"@type":"CollegeOrUniversity","name":"Athabasca University"},
+      {"@type":"CollegeOrUniversity","name":"Carleton University"}
+    ],
+    "sameAs": [
+      "https://github.com/yourusername",
+      "https://www.linkedin.com/in/your-profile"
+    ]
+  }
+  </script>
+
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -11,16 +40,21 @@
     <div class="brand">
       <img src="headshot.jpg" alt="Portrait of Dr. Mahdee Jodayree" />
       <h1>Dr. Mahdee Jodayree</h1>
-      <p>PhD in Computer Science<br />Department of Computing & Software<br />McMaster University</p>
+      <p>PhD in Computer Science<br>Department of Computing &amp; Software<br>McMaster University</p>
     </div>
 
     <nav class="nav">
       <a href="#about">About</a>
       <a href="#expertise">Teaching Expertise</a>
       <a href="#teaching">Teaching Experience</a>
-      <a href="#publications">Publications</a>
+      <a href="#education">Education</a>
+      <a href="#research">Research Experience</a>
       <a href="#projects">Projects</a>
-      <a href="#awards">Awards</a>
+      <a href="#workshops">Workshops &amp; Seminars</a>
+      <a href="#certs">Certifications</a>
+      <a href="#awards">Grants &amp; Awards</a>
+      <a href="#service">Service</a>
+      <a href="#publications">Publications</a>
       <a href="#contact">Contact</a>
     </nav>
 
@@ -30,10 +64,9 @@
     </div>
 
     <footer class="contact">
-      <p><a href="mailto:mahdee@example.com">mahdee@example.com</a></p>
       <p>
-        <a href="https://www.linkedin.com">LinkedIn</a> •
-        <a href="https://github.com/yourusername">GitHub</a>
+        <a href="https://www.linkedin.com/in/your-profile" rel="me">LinkedIn</a> •
+        <a href="https://github.com/yourusername" rel="me">GitHub</a>
       </p>
       <small>Last updated: Oct 2025</small>
     </footer>
@@ -43,16 +76,15 @@
     <section id="about">
       <h2>About</h2>
       <p>
-        I am <strong>Dr. Mahdee Jodayree</strong>, a researcher and educator in
-        Computer Science with expertise in federated learning, cloud computing, cybersecurity,
-        and large-scale distributed systems. I completed my PhD at McMaster University
-        in the Department of Computing & Software, where my research focused on
-        distributed machine learning, secure aggregation, and performance optimization.
+        I am <strong>Dr. Mahdee Jodayree</strong>, a researcher and educator in Computer Science.
+        My work spans federated learning, cloud computing, cybersecurity, and distributed systems.
+        I completed my PhD at McMaster University (Department of Computing &amp; Software),
+        focusing on secure, bandwidth-aware federated learning and performance optimization.
       </p>
     </section>
 
     <section id="expertise">
-      <h2>Teaching Expertise — Graduate & Undergraduate</h2>
+      <h2>Teaching Expertise — Graduate &amp; Undergraduate</h2>
       <ul class="cols">
         <li>Programming (Python, Java, C, C++, C#, MATLAB, R, TensorFlow, PyTorch, Scikit-learn, Keras, JAX)</li>
         <li>Computer Networks and Security</li>
@@ -72,9 +104,117 @@
     <section id="teaching">
       <h2>Teaching Experience</h2>
       <ul>
-        <li>Developed and delivered undergraduate and graduate courses in Computer Networks, Cloud Computing, Machine Learning, Data Analytics, Programming, Data Structures and Algorithms, and Discrete Mathematics for Computer Science — designing interactive lectures, hands-on exercises, and assessments that made complex technical concepts accessible and engaging.</li>
-        <li>Designed hands-on labs for practical courses to enhance experiential learning and skill application.</li>
-        <li>Created slides, homework, assignments, and tutorials for theoretical courses to support student learning and comprehension.</li>
+        <li>Designed and delivered courses in Networks, Cloud Computing, Machine Learning, Data Analytics, Programming, Data Structures &amp; Algorithms, and Discrete Mathematics with interactive lectures and hands-on exercises.</li>
+        <li>Built practical lab experiences to strengthen experiential learning and skills application.</li>
+        <li>Developed slides, assignments, homework, and tutorials for theory-focused courses.</li>
+      </ul>
+    </section>
+
+    <section id="education">
+      <h2>Education</h2>
+      <ul>
+        <li>
+          <strong>Ph.D., Computer Science</strong> — McMaster University, Hamilton, ON (June 2024)<br>
+          Supervisors: Dr. Ryszard Janicki, Dr. Wenbo He<br>
+          Dissertation focus: Federated Machine Learning — Optimization &amp; Security Enhancement.<br>
+          Highlight: Reduced communication overhead between edge devices and servers.
+        </li>
+        <li>
+          <strong>MSc, Computer Information Systems</strong> — Athabasca University, Calgary, AB (Aug 2018)<br>
+          Supervisors: Dr. Mahmoud Abaza, Dr. Qing Tan<br>
+          Focus: Cloud Load Balancing and Quality of Service in Networking.
+        </li>
+        <li>
+          <strong>BSc, Computer Science &amp; Mathematics</strong> — Carleton University, Ottawa, ON (May 2013)
+        </li>
+      </ul>
+    </section>
+
+    <section id="research">
+      <h2>Research Experience</h2>
+      <h3>Ph.D. Studies</h3>
+      <ul>
+        <li>Researched Federated Learning with emphasis on optimization and security.</li>
+        <li>Reduced communication overhead across edge–server pathways.</li>
+        <li>Integrated Indigenous pedagogies into STEM outreach for K–12 math and computing.</li>
+        <li>Designed modular, scalable object-oriented software architectures for enterprise systems.</li>
+        <li>Optimized database design and data structures for large-scale information systems.</li>
+      </ul>
+
+      <h3>Master’s Studies</h3>
+      <ul>
+        <li>Investigated cloud load balancing and QoS in networking environments.</li>
+        <li>Built simulations for cloud resource management and performance analysis.</li>
+      </ul>
+
+      <h3>Focus Areas</h3>
+      <ul>
+        <li><strong>Machine Learning:</strong> Distributed ML, Federated Learning, Health Informatics.</li>
+        <li><strong>Cloud &amp; Networking:</strong> Cloud Security, Load Balancing, IoT Networking, Data Center Networking, QoS.</li>
+      </ul>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <h3>Ph.D. Research Projects</h3>
+      <ul>
+        <li><strong>Federated Machine Learning:</strong> Optimization &amp; security enhancements; bandwidth-aware aggregation; improved resource utilization and latency.</li>
+        <li><strong>Object-Oriented Architectures:</strong> Modular, scalable designs using proven patterns to support enterprise applications.</li>
+        <li><strong>Database Design &amp; Data Structures:</strong> Performance-tuned schemas and data access strategies for large information systems.</li>
+        <li><strong>Network Simulations:</strong> Modeled complex topologies and cloud protocols with <em>GNS3</em>, <em>ns-3</em>, and <em>Cisco Packet Tracer</em>; used <em>MATLAB/Simulink</em> for control-system models; created virtual testbeds with <em>VirtualBox</em> and managed VMs via <em>VMM</em> for resource-allocation studies.</li>
+      </ul>
+
+      <h3>Master’s Research Projects</h3>
+      <ul>
+        <li><strong>Cloud Load Balancing &amp; QoS:</strong> Evaluated techniques and their impact on performance and reliability.</li>
+        <li><strong>Cloud Resource Simulations:</strong> Built studies with <em>CloudSim</em>, <em>iFogSim</em>, and <em>SimGrid</em> to analyze utilization, latency, and throughput under varied workloads; identified bottlenecks and optimized allocation strategies.</li>
+      </ul>
+    </section>
+
+    <section id="workshops">
+      <h2>Workshops &amp; Seminars</h2>
+      <ul>
+        <li><strong>Huawei Workshop</strong> — Toronto, Canada (Apr 2023): Program Verification, PL Implementation, Concurrent Data Structures.</li>
+        <li><strong>IBM Canada</strong> — Toronto, ON (Mar 2023): Software Engineering Best Practices &amp; Innovations.</li>
+        <li><strong>Axia Engineering</strong> — Mississauga, ON (Feb 2023): Engineering Consultancy &amp; Software Development.</li>
+        <li><strong>Arrayus Technologies Inc</strong> — Ottawa, ON (Jan 2023): Innovation for Technology Solutions &amp; Strategy.</li>
+        <li><strong>CrowdStrike</strong> — Kitchener, ON (Dec 2022): Cybersecurity Trends &amp; SE Methodologies.</li>
+        <li><strong>CVI &amp; HMI Innovation</strong> — Hamilton, ON (Nov 2022): Human-Machine Interface &amp; Computer Vision.</li>
+      </ul>
+    </section>
+
+    <section id="certs">
+      <h2>Certifications</h2>
+      <ul>
+        <li><strong>Teaching &amp; Learning Certificate</strong>, MacPherson Institute (McMaster University)</li>
+      </ul>
+      <p><em>Courses completed:</em> EDUCATION 740 (Peer-Evaluated Teaching Experience); EDUCATION 760 (Self-Directed Study); EDUCATION 780 (Self-Directed Teaching Experience).</p>
+      <ul>
+        <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
+        <li>Microsoft Certified: Azure Data Fundamentals (DP-900)</li>
+        <li>CompTIA A+ — Remote Support Technician</li>
+      </ul>
+    </section>
+
+    <section id="awards">
+      <h2>Grants, Awards, and Honors</h2>
+      <ul>
+        <li><strong>Distinguished Teaching Assistant Award</strong> — McMaster University (Fall 2019 &amp; Winter 2020)</li>
+        <li><strong>Research Excellence Award</strong> — Federated Learning and Health Informatics (2023)</li>
+        <li><strong>Graduate Research Grant</strong> — Communication optimization in FL frameworks (2022)</li>
+        <li><strong>Best Paper Award</strong> — KES 2023 (Data Security in Federated Learning)</li>
+      </ul>
+    </section>
+
+    <section id="service">
+      <h2>Service to the Academic Community</h2>
+      <h3>Coffee Hour for Students</h3>
+      <ul>
+        <li>Planned and ran graduate CS community events; managed logistics, engagement, and follow-up.</li>
+      </ul>
+      <h3>Capstone Project Mentor (Mechatronics &amp; Computer Science)</h3>
+      <ul>
+        <li>Guided students during final presentations; provided structured feedback and coordination with faculty.</li>
       </ul>
     </section>
 
@@ -83,55 +223,22 @@
 
       <h3>Submitted / Under Review</h3>
       <ul>
-        <li>
-          <strong>Q1 Journal Article (submitted):</strong> <em>Proof-Before-Train Federated Learning—ECC-Backed Zero-Leak Commitments and Trust-Aware Aggregation under Bandwidth Constraints</em>,
-          submitted to <em>Computers & Security</em> (Elsevier, Q1).
-        </li>
-        <li>
-          <strong>Q2 Journal Article (under review):</strong> <em>A Predictive Approach to Workload Balancing in Cloud Computing Using Pairwise Comparison</em>,
-          submitted to the <em>Journal of Cloud Computing</em> (Q2).
-        </li>
+        <li><strong>Q1 (Submitted):</strong> <em>Proof-Before-Train Federated Learning—ECC-Backed Zero-Leak Commitments and Trust-Aware Aggregation under Bandwidth Constraints</em>, submitted to <em>Computers &amp; Security</em> (Elsevier, Q1).</li>
+        <li><strong>Q2 (Under review):</strong> <em>A Predictive Approach to Workload Balancing in Cloud Computing Using Pairwise Comparison</em>, submitted to the <em>Journal of Cloud Computing</em> (Q2).</li>
       </ul>
 
       <h3>Published Papers</h3>
       <ol>
-        <li>
-          Jodayree, M., He, W., & Janicki, R. (2023). <em>Preventing Text Data Poisoning Attacks in Federated Machine Learning by an Encrypted Verification Key.</em>
-          Presented at the <strong>International Joint Conference on Rough Sets (IJCRS 2023)</strong>.
-          <a href="https://link.springer.com/chapter/10.1007/978-3-031-50959-9_42" target="_blank">SpringerLink</a>.
-        </li>
-        <li>
-          Jodayree, M., He, W., & Janicki, R. (2023). <em>Preventing Image Data Poisoning Attacks in Federated Machine Learning by an Encrypted Verification Key.</em>
-          Presented at the <strong>27th International Conference on Knowledge-Based and Intelligent Information & Engineering Systems (KES 2023)</strong>.
-          <a href="https://doi.org/10.1016/j.procs.2023.10.264" target="_blank">DOI</a>.
-        </li>
-        <li>
-          Jodayree, M., & Janicki, R. (2020). <em>A predictive resources management for clouds.</em>
-          In <em>Developments of Artificial Intelligence Technologies in Computation and Robotics</em>:
-          Proceedings of the 14th International FLINS Conference (FLINS 2020), 421–428.
-          <a href="https://doi.org/10.1142/9789811223334_0051" target="_blank">DOI</a>.
-        </li>
-        <li>
-          Jodayree, M., Abaza, M., & Tan, Q. (2019). <em>A predictive workload balancing algorithm in cloud services.</em>
-          <em>Procedia Computer Science</em>, 159, 902–912.
-          <a href="https://doi.org/10.1016/j.procs.2019.09.250" target="_blank">DOI</a>.
-        </li>
+        <li>Jodayree, M., He, W., &amp; Janicki, R. (2023). <em>Preventing Text Data Poisoning Attacks in Federated Machine Learning by an Encrypted Verification Key</em>. IJCRS 2023. <a href="https://link.springer.com/chapter/10.1007/978-3-031-50959-9_42" target="_blank" rel="noopener">SpringerLink</a>.</li>
+        <li>Jodayree, M., He, W., &amp; Janicki, R. (2023). <em>Preventing Image Data Poisoning Attacks in Federated Machine Learning by an Encrypted Verification Key</em>. KES 2023. <a href="https://doi.org/10.1016/j.procs.2023.10.264" target="_blank" rel="noopener">DOI</a>.</li>
+        <li>Jodayree, M., &amp; Janicki, R. (2020). <em>A predictive resources management for clouds</em>. In FLINS 2020, 421–428. <a href="https://doi.org/10.1142/9789811223334_0051" target="_blank" rel="noopener">DOI</a>.</li>
+        <li>Jodayree, M., Abaza, M., &amp; Tan, Q. (2019). <em>A predictive workload balancing algorithm in cloud services</em>. <em>Procedia Computer Science</em>, 159, 902–912. <a href="https://doi.org/10.1016/j.procs.2019.09.250" target="_blank" rel="noopener">DOI</a>.</li>
       </ol>
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <p>Descriptions of selected research and industrial projects can be added here.</p>
-    </section>
-
-    <section id="awards">
-      <h2>Awards</h2>
-      <ul><li>To be added (e.g., fellowships, best paper awards).</li></ul>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:mahdee@example.com">mahdee@example.com</a></p>
+      <p>Connect with me on <a href="https://www.linkedin.com/in/your-profile" rel="me">LinkedIn</a> or explore my code on <a href="https://github.com/yourusername" rel="me">GitHub</a>.</p>
     </section>
   </main>
 </body>
