--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  <!-- ===== HERO HEADER ===== -->
+  <!-- ===== HEADER (white background) ===== -->
   <header class="hero">
     <img src="headshot.jpg" alt="Portrait of Dr. Mahdee Jodayree" class="hero-photo" />
     <div class="hero-text">
@@ -81,8 +81,8 @@
 
   <!-- ===== MAIN CONTENT ===== -->
   <main class="content">
-    <!-- Keep all your detailed sections here (About, Education, Research, etc.) -->
-    <!-- The rest of the file remains the same as in the previous version -->
+    <!-- All your sections (About, Education, Research, etc.) go here -->
+    <!-- Content unchanged from your previous version -->
   </main>
 </body>
 </html>
