--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Personal academic homepage of Dr. Mahdee Jodayree, PhD in Computer Science from McMaster University. Research areas: Federated Learning, Cloud Computing, Cybersecurity, Distributed Systems. Teaching expertise: ML, Networks, Discrete Mathematics, Data Structures, SDLC.">
   <meta name="robots" content="index, follow">
 
-  <!-- Schema.org Person (basic) -->
+  <!-- Schema.org Person -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -37,18 +37,7 @@
 </head>
 
 <body>
-  <!-- ===== HEADER (white background) ===== -->
-  <header class="hero">
-    <img src="headshot.jpg" alt="Portrait of Dr. Mahdee Jodayree" class="hero-photo" />
-    <div class="hero-text">
-      <h1>Dr. Mahdee Jodayree</h1>
-      <p>PhD in Computer Science</p>
-      <p>Department of Computing &amp; Software</p>
-      <p>McMaster University</p>
-    </div>
-  </header>
-
-  <!-- ===== LEFT SIDEBAR ===== -->
+  <!-- LEFT SIDEBAR -->
   <aside class="sidebar" role="navigation" aria-label="Primary">
     <nav class="nav">
       <a href="#about">About</a>
@@ -79,10 +68,159 @@
     </footer>
   </aside>
 
-  <!-- ===== MAIN CONTENT ===== -->
+  <!-- HEADER (WHITE, NOT UNDER SIDEBAR) -->
+  <header class="hero">
+    <img src="headshot.jpg" alt="Portrait of Dr. Mahdee Jodayree" class="hero-photo" />
+    <div class="hero-text">
+      <h1>Dr. Mahdee Jodayree</h1>
+      <p>PhD in Computer Science</p>
+      <p>Department of Computing &amp; Software</p>
+      <p>McMaster University</p>
+    </div>
+  </header>
+
+  <!-- MAIN CONTENT -->
   <main class="content">
-    <!-- All your sections (About, Education, Research, etc.) go here -->
-    <!-- Content unchanged from your previous version -->
-  </main>
-</body>
-</html>
+    <section id="about">
+      <h2>About</h2>
+      <p>
+        I am <strong>Dr. Mahdee Jodayree</strong>, a researcher and educator in Computer Science.
+        My work spans federated learning, cloud computing, cybersecurity, and distributed systems.
+        I completed my PhD at McMaster University (Department of Computing &amp; Software),
+        focusing on secure, bandwidth-aware federated learning and performance optimization.
+      </p>
+    </section>
+
+    <section id="expertise">
+      <h2>Teaching Expertise — Graduate &amp; Undergraduate</h2>
+      <ul class="cols">
+        <li>Programming (Python, Java, C, C++, C#, MATLAB, R, TensorFlow, PyTorch, Scikit-learn, Keras, JAX)</li>
+        <li>Computer Networks and Security</li>
+        <li>Cloud Computing</li>
+        <li>Machine Learning</li>
+        <li>Data Analytics</li>
+        <li>Computer Architecture</li>
+        <li>Cybersecurity</li>
+        <li>Discrete Mathematics for Computer Science</li>
+        <li>Automata and Computability</li>
+        <li>Data Structures and Algorithms</li>
+        <li>Software Development Life Cycle (SDLC)</li>
+        <li>Capstone Projects</li>
+      </ul>
+    </section>
+
+    <section id="teaching">
+      <h2>Teaching Experience</h2>
+      <ul>
+        <li>Designed and delivered courses in Networks, Cloud Computing, Machine Learning, Data Analytics, Programming, Data Structures &amp; Algorithms, and Discrete Mathematics with interactive lectures and hands-on exercises.</li>
+        <li>Built practical lab experiences to strengthen experiential learning and skill application.</li>
+        <li>Developed slides, assignments, homework, and tutorials for theory-focused courses.</li>
+      </ul>
+    </section>
+
+    <section id="education">
+      <h2>Education</h2>
+      <ul>
+        <li>
+          <strong>Ph.D., Computer Science</strong> — McMaster University, Hamilton, ON (June 2024)<br>
+          Supervisors: Dr. Ryszard Janicki, Dr. Wenbo He<br>
+          Focus: Federated Machine Learning — Optimization &amp; Security Enhancement<br>
+          Highlight: Reduced communication overhead between edge devices and servers.
+        </li>
+        <li>
+          <strong>MSc, Computer Information Systems</strong> — Athabasca University, Calgary, AB (Aug 2018)<br>
+          Supervisors: Dr. Mahmoud Abaza, Dr. Qing Tan<br>
+          Focus: Cloud Load Balancing and Quality of Service in Networking.
+        </li>
+        <li>
+          <strong>BSc, Computer Science &amp; Mathematics</strong> — Carleton University, Ottawa, ON (May 2013)
+        </li>
+      </ul>
+    </section>
+
+    <section id="research">
+      <h2>Research Experience</h2>
+      <h3>Ph.D. Studies</h3>
+      <ul>
+        <li>Researched Federated Learning with emphasis on optimization and security.</li>
+        <li>Reduced communication overhead across edge–server pathways.</li>
+        <li>Integrated Indigenous pedagogies into STEM outreach for K–12 mathematics and computing.</li>
+        <li>Designed modular, scalable object-oriented software architectures for enterprise systems.</li>
+        <li>Optimized database design and data structures for large-scale information systems.</li>
+      </ul>
+
+      <h3>Master’s Studies</h3>
+      <ul>
+        <li>Investigated cloud load balancing and Quality of Service in networking environments.</li>
+        <li>Built simulations for cloud resource management and performance analysis.</li>
+      </ul>
+
+      <h3>Focus Areas</h3>
+      <ul>
+        <li><strong>Machine Learning:</strong> Distributed ML, Federated Learning, Health Informatics.</li>
+        <li><strong>Cloud &amp; Networking:</strong> Cloud Security, Load Balancing, IoT Networking, Data Center Networking, QoS.</li>
+      </ul>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <h3>Ph.D. Research Projects</h3>
+      <ul>
+        <li><strong>Federated Machine Learning:</strong> Optimization &amp; security enhancements; bandwidth-aware aggregation; improved resource utilization and latency.</li>
+        <li><strong>Object-Oriented Architectures:</strong> Modular, scalable designs using proven patterns to support enterprise applications.</li>
+        <li><strong>Database Design &amp; Data Structures:</strong> Performance-tuned schemas and data access strategies for large information systems.</li>
+        <li><strong>Network Simulations:</strong> Modeled complex topologies with <em>GNS3</em>, <em>ns-3</em>, and <em>Cisco Packet Tracer</em>; used <em>MATLAB/Simulink</em> for control systems; created virtual environments with <em>VirtualBox</em> and <em>VMM</em>.</li>
+      </ul>
+
+      <h3>Master’s Research Projects</h3>
+      <ul>
+        <li><strong>Cloud Load Balancing &amp; QoS:</strong> Evaluated methods to improve performance and reliability.</li>
+        <li><strong>Cloud Resource Simulations:</strong> Built models with <em>CloudSim</em>, <em>iFogSim</em>, and <em>SimGrid</em> to assess utilization and throughput under varied workloads.</li>
+      </ul>
+    </section>
+
+    <section id="workshops">
+      <h2>Workshops &amp; Seminars</h2>
+      <ul>
+        <li><strong>Huawei Workshop</strong> — Toronto, Canada (Apr 2023): Program Verification, PL Implementation, Concurrent Data Structures.</li>
+        <li><strong>IBM Canada</strong> — Toronto, ON (Mar 2023): Software Engineering Best Practices &amp; Innovations.</li>
+        <li><strong>Axia Engineering</strong> — Mississauga, ON (Feb 2023): Engineering Consultancy &amp; Software Development.</li>
+        <li><strong>Arrayus Technologies Inc</strong> — Ottawa, ON (Jan 2023): Innovation for Technology Solutions &amp; Strategy.</li>
+        <li><strong>CrowdStrike</strong> — Kitchener, ON (Dec 2022): Cybersecurity Trends &amp; SE Methodologies.</li>
+        <li><strong>CVI &amp; HMI Innovation</strong> — Hamilton, ON (Nov 2022): Human-Machine Interface &amp; Computer Vision.</li>
+      </ul>
+    </section>
+
+    <section id="certs">
+      <h2>Certifications</h2>
+      <ul>
+        <li><strong>Teaching &amp; Learning Certificate</strong>, MacPherson Institute (McMaster University)</li>
+      </ul>
+      <p><em>Courses completed:</em> EDUCATION 740 (Peer-Evaluated Teaching Experience); EDUCATION 760 (Self-Directed Study); EDUCATION 780 (Self-Directed Teaching Experience).</p>
+      <ul>
+        <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
+        <li>Microsoft Certified: Azure Data Fundamentals (DP-900)</li>
+        <li>CompTIA A+ — Remote Support Technician</li>
+      </ul>
+    </section>
+
+    <section id="awards">
+      <h2>Grants, Awards, and Honors</h2>
+      <ul>
+        <li><strong>Distinguished Teaching Assistant Award</strong> — McMaster University (Fall 2019 &amp; Winter 2020)</li>
+        <li><strong>Research Excellence Award</strong> — Federated Learning &amp; Health Informatics (2023)</li>
+        <li><strong>Graduate Research Grant</strong> — Optimization in Federated Learning frameworks (2022)</li>
+        <li><strong>Best Paper Award</strong> — KES 2023 (Data Security in Federated Learning)</li>
+      </ul>
+    </section>
+
+    <section id="publications">
+      <h2>Publications</h2>
+      <h3>Submitted / Under Review</h3>
+      <ul>
+        <li><strong>Q1 (Submitted):</strong> <em>Proof-Before-Train Federated Learning—ECC-Backed Zero-Leak Commitments and Trust-Aware Aggregation under Bandwidth Constraints</em>, submitted to <em>Computers &amp; Security</em> (Elsevier, Q1).</li>
+        <li><strong>Q2 (Under review):</strong> <em>A Predictive Approach to Workload Balancing in Cloud Computing Using Pairwise Comparison</em>, submitted to the <em>Journal of Cloud Computing</em> (Q2).</li>
+      </ul>
+      <h3>Published Papers</h3>
+      <ol>
+        <li>Jodayree, M., He, W., &amp; Janicki, R. (2023). <em>Preventing Text Data Poisoning Attacks in Federated Machine Learning by an Encrypted Verification Key.</em> IJCRS 2023. <a href="https://link.springer.com/chapt
