--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Dr. Mahdee Jodayree — Personal Academic Homepage</title>
 
   <!-- SEO -->
-  <meta name="description" content="Personal academic homepage of Dr. Mahdee Jodayree, PhD in Computer Science from McMaster University. Research areas: Federated Learning, Cloud Computing, Cybersecurity, Distributed Systems. Teaching expertise: ML, Networks, Discrete Mathematics, Data Structures, SDLC.">
-  <meta name="robots" content="index, follow">
+  <meta name="description" content="Personal academic homepage of Dr. Mahdee Jodayree, PhD in Computer Science from McMaster University. Research areas: Federated Learning, Cloud Computing, Cybersecurity, Distributed Systems." />
+  <meta name="robots" content="index, follow" />
 
   <!-- Schema.org Person -->
   <script type="application/ld+json">
@@ -27,17 +27,28 @@
       {"@type":"CollegeOrUniversity","name":"Carleton University"}
     ],
     "sameAs": [
-      "https://github.com/yourusername",
-      "https://www.linkedin.com/in/your-profile"
+      "https://github.com/mahdijaf",
+      "https://www.linkedin.com/in/mahdeej/"
     ]
   }
   </script>
 
   <link rel="stylesheet" href="styles.css" />
+  <script>
+    // On first load (no hash), jump to the About section
+    window.addEventListener('DOMContentLoaded', function () {
+      if (!location.hash) {
+        const about = document.getElementById('about');
+        if (about && about.scrollIntoView) {
+          about.scrollIntoView({ behavior: 'auto', block: 'start' });
+        }
+      }
+    });
+  </script>
 </head>
 
 <body>
-  <!-- LEFT SIDEBAR -->
+  <!-- Fixed blue sidebar -->
   <aside class="sidebar" role="navigation" aria-label="Primary">
     <nav class="nav">
       <a href="#about">About</a>
@@ -61,36 +72,37 @@
 
     <footer class="contact">
       <p>
-        <a href="https://www.linkedin.com/in/your-profile" rel="me">LinkedIn</a> •
-        <a href="https://github.com/yourusername" rel="me">GitHub</a>
+        <a href="https://www.linkedin.com/in/mahdeej/" rel="me" target="_blank">LinkedIn</a> •
+        <a href="https://github.com/mahdijaf" rel="me" target="_blank">GitHub</a>
       </p>
       <small>Last updated: Oct 2025</small>
     </footer>
   </aside>
 
-  <!-- HEADER (WHITE, NOT UNDER SIDEBAR) -->
-  <header class="hero">
-    <img src="headshot.jpg" alt="Portrait of Dr. Mahdee Jodayree" class="hero-photo" />
-    <div class="hero-text">
-      <h1>Dr. Mahdee Jodayree</h1>
-      <p>PhD in Computer Science</p>
-      <p>Department of Computing &amp; Software</p>
-      <p>McMaster University</p>
-    </div>
-  </header>
+  <!-- Everything to the right of the sidebar -->
+  <div class="page">
 
-  <!-- MAIN CONTENT -->
-  <main class="content">
-    <section id="about">
-      <h2>About</h2>
-      <p>
-        I am <strong>Dr. Mahdee Jodayree</strong>, a researcher and educator in Computer Science.
-        My work spans federated learning, cloud computing, cybersecurity, and distributed systems.
-        I completed my PhD at McMaster University (Department of Computing &amp; Software),
-        focusing on secure, bandwidth-aware federated learning and performance optimization.
-      </p>
+    <!-- ABOUT (photo left, text right) -->
+    <section id="about" class="about">
+      <div class="about-wrap">
+        <img src="headshot.jpg" alt="Portrait of Dr. Mahdee Jodayree" class="about-photo" />
+        <div class="about-text">
+          <h1>Dr. Mahdee Jodayree</h1>
+          <p class="about-credential">
+            PhD in Computer Science<br>
+            Department of Computing &amp; Software<br>
+            McMaster University
+          </p>
+          <p class="about-blurb">
+            I am a researcher and educator in Computer Science with interests in federated learning, cloud computing,
+            cybersecurity, and distributed systems. My Ph.D. work focused on secure, bandwidth-aware federated learning
+            and performance optimization.
+          </p>
+        </div>
+      </div>
     </section>
 
+    <!-- TEACHING EXPERTISE -->
     <section id="expertise">
       <h2>Teaching Expertise — Graduate &amp; Undergraduate</h2>
       <ul class="cols">
@@ -109,6 +121,7 @@
       </ul>
     </section>
 
+    <!-- TEACHING EXPERIENCE -->
     <section id="teaching">
       <h2>Teaching Experience</h2>
       <ul>
@@ -118,6 +131,7 @@
       </ul>
     </section>
 
+    <!-- EDUCATION -->
     <section id="education">
       <h2>Education</h2>
       <ul>
@@ -138,6 +152,7 @@
       </ul>
     </section>
 
+    <!-- RESEARCH EXPERIENCE -->
     <section id="research">
       <h2>Research Experience</h2>
       <h3>Ph.D. Studies</h3>
@@ -162,6 +177,7 @@
       </ul>
     </section>
 
+    <!-- PROJECTS -->
     <section id="projects">
       <h2>Projects</h2>
       <h3>Ph.D. Research Projects</h3>
@@ -179,6 +195,7 @@
       </ul>
     </section>
 
+    <!-- WORKSHOPS -->
     <section id="workshops">
       <h2>Workshops &amp; Seminars</h2>
       <ul>
@@ -191,6 +208,7 @@
       </ul>
     </section>
 
+    <!-- CERTIFICATIONS -->
     <section id="certs">
       <h2>Certifications</h2>
       <ul>
@@ -204,6 +222,7 @@
       </ul>
     </section>
 
+    <!-- AWARDS -->
     <section id="awards">
       <h2>Grants, Awards, and Honors</h2>
       <ul>
@@ -214,6 +233,20 @@
       </ul>
     </section>
 
+    <!-- SERVICE -->
+    <section id="service">
+      <h2>Service to the Academic Community</h2>
+      <h3>Coffee Hour for Students</h3>
+      <ul>
+        <li>Planned and managed graduate CS community events; coordinated logistics and engagement.</li>
+      </ul>
+      <h3>Capstone Project Mentor (Mechatronics &amp; Computer Science)</h3>
+      <ul>
+        <li>Guided student presentations, provided structured feedback, and supported faculty coordination.</li>
+      </ul>
+    </section>
+
+    <!-- PUBLICATIONS -->
     <section id="publications">
       <h2>Publications</h2>
       <h3>Submitted / Under Review</h3>
@@ -223,4 +256,24 @@
       </ul>
       <h3>Published Papers</h3>
       <ol>
-        <li>Jodayree, M., He, W., &amp; Janicki, R. (2023). <em>Preventing Text Data Poisoning Attacks in Federated Machine Learning by an Encrypted Verification Key.</em> IJCRS 2023. <a href="https://link.springer.com/chapt
+        <li>Jodayree, M., He, W., &amp; Janicki, R. (2023). <em>Preventing Text Data Poisoning Attacks in Federated Machine Learning by an Encrypted Verification Key.</em> IJCRS 2023. <a href="https://link.springer.com/chapter/10.1007/978-3-031-50959-9_42" target="_blank" rel="noopener">SpringerLink</a>.</li>
+        <li>Jodayree, M., He, W., &amp; Janicki, R. (2023). <em>Preventing Image Data Poisoning Attacks in Federated Machine Learning by an Encrypted Verification Key.</em> KES 2023. <a href="https://doi.org/10.1016/j.procs.2023.10.264" target="_blank" rel="noopener">DOI</a>.</li>
+        <li>Jodayree, M., &amp; Janicki, R. (2020). <em>A predictive resources management for clouds.</em> In FLINS 2020, 421–428. <a href="https://doi.org/10.1142/9789811223334_0051" target="_blank" rel="noopener">DOI</a>.</li>
+        <li>Jodayree, M., Abaza, M., &amp; Tan, Q. (2019). <em>A predictive workload balancing algorithm in cloud services.</em> <em>Procedia Computer Science</em>, 159, 902–912. <a href="https://doi.org/10.1016/j.procs.2019.09.250" target="_blank" rel="noopener">DOI</a>.</li>
+      </ol>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>
+        Connect with me on
+        <a href="https://www.linkedin.com/in/mahdeej/" rel="me" target="_blank">LinkedIn</a>,
+        or explore my work on
+        <a href="https://github.com/mahdijaf" rel="me" target="_blank">GitHub</a>.
+      </p>
+    </section>
+
+  </div><!-- /.page -->
+</body>
+</html>
