--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
   <!-- MAIN CONTENT -->
   <main class="content">
     <!-- ABOUT with photo + info side-by-side -->
-    <section id="about" class="about">
+    <section id="about" class="section about">
+      <h2 class="section-title">About</h2>
+
       <div class="about-wrap">
         <img src="headshot.jpg" alt="Portrait of Dr. Mahdee Jodayree" class="about-photo" />
         <div class="about-text">
-          <h1>Dr. Mahdee Jodayree</h1>
+          <h1 class="name">Dr. Mahdee Jodayree</h1>
           <p class="about-credential">
             PhD in Computer Science<br>
             Department of Computing &amp; Software<br>
@@ -92,8 +94,8 @@
       </p>
     </section>
 
-    <section id="expertise">
-      <h2>Teaching Expertise — Graduate &amp; Undergraduate</h2>
+    <section id="expertise" class="section">
+      <h2 class="section-title">Teaching Expertise — Graduate &amp; Undergraduate</h2>
       <ul class="cols">
         <li>Programming (Python, Java, C, C++, C#, MATLAB, R, TensorFlow, PyTorch, Scikit-learn, Keras, JAX)</li>
         <li>Computer Networks and Security</li>
@@ -110,8 +112,8 @@
       </ul>
     </section>
 
-    <section id="teaching">
-      <h2>Teaching Experience</h2>
+    <section id="teaching" class="section">
+      <h2 class="section-title">Teaching Experience</h2>
       <ul>
         <li>Designed and delivered courses in Networks, Cloud Computing, Machine Learning, Data Analytics, Programming, Data Structures &amp; Algorithms, and Discrete Mathematics with interactive lectures and hands-on exercises.</li>
         <li>Built practical lab experiences to strengthen experiential learning and skill application.</li>
@@ -119,8 +121,8 @@
       </ul>
     </section>
 
-    <section id="education">
-      <h2>Education</h2>
+    <section id="education" class="section">
+      <h2 class="section-title">Education</h2>
       <ul>
         <li>
           <strong>Ph.D., Computer Science</strong> — McMaster University, Hamilton, ON (June 2024)<br>
@@ -139,8 +141,8 @@
       </ul>
     </section>
 
-    <section id="research">
-      <h2>Research Experience</h2>
+    <section id="research" class="section">
+      <h2 class="section-title">Research Experience</h2>
       <h3>Ph.D. Studies</h3>
       <ul>
         <li>Researched Federated Learning with emphasis on optimization and security.</li>
@@ -163,8 +165,8 @@
       </ul>
     </section>
 
-    <section id="projects">
-      <h2>Projects</h2>
+    <section id="projects" class="section">
+      <h2 class="section-title">Projects</h2>
       <h3>Ph.D. Research Projects</h3>
       <ul>
         <li><strong>Federated Machine Learning:</strong> Optimization &amp; security enhancements; bandwidth-aware aggregation; improved resource utilization and latency.</li>
@@ -180,8 +182,8 @@
       </ul>
     </section>
 
-    <section id="workshops">
-      <h2>Workshops &amp; Seminars</h2>
+    <section id="workshops" class="section">
+      <h2 class="section-title">Workshops &amp; Seminars</h2>
       <ul>
         <li><strong>Huawei Workshop</strong> — Toronto, Canada (Apr 2023): Program Verification, PL Implementation, Concurrent Data Structures.</li>
         <li><strong>IBM Canada</strong> — Toronto, ON (Mar 2023): Software Engineering Best Practices &amp; Innovations.</li>
@@ -192,8 +194,8 @@
       </ul>
     </section>
 
-    <section id="certs">
-      <h2>Certifications</h2>
+    <section id="certs" class="section">
+      <h2 class="section-title">Certifications</h2>
       <ul>
         <li><strong>Teaching &amp; Learning Certificate</strong>, MacPherson Institute (McMaster University)</li>
       </ul>
@@ -205,8 +207,8 @@
       </ul>
     </section>
 
-    <section id="awards">
-      <h2>Grants, Awards, and Honors</h2>
+    <section id="awards" class="section">
+      <h2 class="section-title">Grants, Awards, and Honors</h2>
       <ul>
         <li><strong>Distinguished Teaching Assistant Award</strong> — McMaster University (Fall 2019 &amp; Winter 2020)</li>
         <li><strong>Research Excellence Award</strong> — Federated Learning &amp; Health Informatics (2023)</li>
@@ -215,8 +217,20 @@
       </ul>
     </section>
 
-    <section id="publications">
-      <h2>Publications</h2>
+    <section id="service" class="section">
+      <h2 class="section-title">Service to the Academic Community</h2>
+      <h3>Coffee Hour for Students</h3>
+      <ul>
+        <li>Planned and managed graduate CS community events; coordinated logistics and engagement.</li>
+      </ul>
+      <h3>Capstone Project Mentor (Mechatronics &amp; Computer Science)</h3>
+      <ul>
+        <li>Guided student presentations, provided structured feedback, and supported faculty coordination.</li>
+      </ul>
+    </section>
+
+    <section id="publications" class="section">
+      <h2 class="section-title">Publications</h2>
       <h3>Submitted / Under Review</h3>
       <ul>
         <li><strong>Q1 (Submitted):</strong> <em>Proof-Before-Train Federated Learning—ECC-Backed Zero-Leak Commitments and Trust-Aware Aggregation under Bandwidth Constraints</em>, submitted to <em>Computers &amp; Security</em> (Elsevier, Q1).</li>
@@ -231,8 +245,8 @@
       </ol>
     </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
+    <section id="contact" class="section">
+      <h2 class="section-title">Contact</h2>
       <p>Connect with me on <a href="https://www.linkedin.com/in/your-profile" rel="me">LinkedIn</a> or explore my work on <a href="https://github.com/yourusername" rel="me">GitHub</a>.</p>
     </section>
   </main>
