--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <link rel="stylesheet" href="styles.css" />
   <script>
-    // On first load (no hash), jump to the About section
+    // Jump to About on first load (no hash)
     window.addEventListener('DOMContentLoaded', function () {
       if (!location.hash) {
         const about = document.getElementById('about');
@@ -75,7 +75,7 @@
   <!-- EVERYTHING TO THE RIGHT OF THE SIDEBAR -->
   <div class="page">
     <main class="content">
-      <!-- ABOUT: photo left, text right -->
+      <!-- ABOUT -->
       <section id="about" class="section about">
         <h2 class="section-title">About</h2>
 
