--- a/index.html
+++ b/index.html
@@ -259,21 +259,19 @@
         </ul>
       </section>
 
-      <!-- CERTIFICATIONS (polished formatting) -->
+      <!-- CERTIFICATIONS (nested courses under the certificate, no "Courses completed:") -->
       <section id="certs" class="section">
         <h2 class="section-title">Certifications</h2>
 
         <ul>
-          <li><strong>Teaching &amp; Learning Certificate</strong>, MacPherson Institute (McMaster University)</li>
-        </ul>
-        <p><em>Courses completed:</em></p>
-        <ul>
-          <li>EDUCATION 740 — Peer-Evaluated Teaching Experience</li>
-          <li>EDUCATION 760 — Self-Directed Study</li>
-          <li>EDUCATION 780 — Self-Directed Teaching Experience</li>
-        </ul>
-
-        <ul>
+          <li>
+            <strong>Teaching &amp; Learning Certificate</strong>, MacPherson Institute (McMaster University)
+            <ul>
+              <li>EDUCATION 740 — Peer-Evaluated Teaching Experience</li>
+              <li>EDUCATION 760 — Self-Directed Study</li>
+              <li>EDUCATION 780 — Self-Directed Teaching Experience</li>
+            </ul>
+          </li>
           <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
           <li>Microsoft Certified: Azure Data Fundamentals (DP-900)</li>
           <li>CompTIA A+ — Remote Support Technician</li>
