--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       <a href="#education">Education</a>
       <a href="#research">Research Experience</a>
       <a href="#projects">Projects</a>
+      <a href="#industry-experience">Professional &amp; Industrial Experience</a>
       <a href="#workshops">Workshops &amp; Seminars</a>
       <a href="#certs">Certifications</a>
       <a href="#awards">Grants &amp; Awards</a>
@@ -246,6 +247,57 @@
         </ul>
       </section>
 
+      
+      <!-- INDUSTRY EXPERIENCE -->
+      <section id="industry-experience" class="section">
+        <h2 class="section-title">Professional &amp; Industrial Experience</h2>
+
+        <article class="xp">
+          <h3 class="job-title">Cloud Infrastructure, Security &amp; DevOps Architect</h3>
+          <div class="job-meta"><span class="company">Manulife</span> • <span class="location">Toronto, ON</span> • <span class="dates">Sep 2021 – Jul 2025</span></div>
+          <ul class="experience-list">
+            <li>Designed, built, and maintained secure, scalable Azure cloud infrastructure using <strong>Terraform</strong>, <strong>Bicep</strong>, and <strong>ARM Templates</strong> across Dev, Test, UAT, and Production.</li>
+            <li>Developed and managed <strong>Azure DevOps (YAML)</strong> CI/CD pipelines for automated provisioning, build, test, and release management.</li>
+            <li>Configured <strong>VNets</strong>, <strong>NSGs</strong>, <strong>Private Endpoints</strong>, and <strong>Key Vault</strong> to ensure secure connectivity, access control, and data protection.</li>
+            <li>Delivered predictive security metrics using <strong>Power BI</strong>, <strong>AI Builder</strong>, and <strong>Dataverse</strong> for vulnerability forecasting.</li>
+          </ul>
+        </article>
+
+        <article class="xp">
+          <h3 class="job-title">Cloud Network &amp; Infrastructure Architect</h3>
+          <div class="job-meta"><span class="company">McMaster Innovation Park</span> • <span class="location">Hamilton, ON</span> • <span class="dates">Sep 2018 – Sep 2021</span></div>
+          <ul class="experience-list">
+            <li>Architected and optimized <strong>hybrid cloud networks</strong> integrating on‑prem and Azure services for research and enterprise clients.</li>
+            <li>Built automated <strong>monitoring and compliance frameworks</strong> to ensure uptime, security, and governance.</li>
+            <li>Supported and optimized multi-language stacks (<strong>Python</strong>, <strong>C#</strong>, .NET) for performance and reliability.</li>
+            <li>Deployed and managed <strong>AKS</strong> clusters to orchestrate containerized workloads with high availability and load balancing.</li>
+          </ul>
+        </article>
+
+        <article class="xp">
+          <h3 class="job-title">Cloud Infrastructure &amp; Security Engineer</h3>
+          <div class="job-meta"><span class="company">TELUS Digital</span> • <span class="location">Calgary, AB</span> • <span class="dates">Sep 2014 – Aug 2018</span></div>
+          <ul class="experience-list">
+            <li>Led <strong>Docker</strong> containerization initiatives and private registries to standardize deployments across teams.</li>
+            <li>Automated environment provisioning with <strong>GitHub Actions</strong>, <strong>PowerShell</strong>, and <strong>Bash</strong> for reproducible builds and auditability.</li>
+            <li>Delivered secure, cross‑platform administration across <strong>Linux</strong> and <strong>UNIX</strong> systems.</li>
+            <li>Hardened application access through <strong>OAuth 2.0</strong> REST API integrations and role‑based controls.</li>
+          </ul>
+        </article>
+
+        <article class="xp">
+          <h3 class="job-title">Cloud Migration Specialist</h3>
+          <div class="job-meta"><span class="company">CIBC</span> • <span class="location">Ottawa, ON</span> • <span class="dates">Sep 2011 – Sep 2014</span></div>
+          <ul class="experience-list">
+            <li>Executed large‑scale <strong>Azure</strong> migration programs, modernizing legacy applications and infrastructure.</li>
+            <li>Designed and maintained <strong>networking</strong> and <strong>storage</strong> solutions to support high‑availability financial systems.</li>
+            <li>Ensured secure data transfer, encryption, and compliance with industry regulations.</li>
+            <li>Produced clear documentation and training to accelerate adoption of cloud platforms.</li>
+          </ul>
+        </article>
+      </section>
+
+
       <!-- WORKSHOPS -->
       <section id="workshops" class="section">
         <h2 class="section-title">Workshops &amp; Seminars</h2>
@@ -340,6 +392,7 @@
     <a href="#education" role="menuitem">Education</a>
     <a href="#research" role="menuitem">Research Experience</a>
     <a href="#projects" role="menuitem">Projects</a>
+    <a href="#industry-experience" role="menuitem">Professional &amp; Industrial Experience</a>
     <a href="#workshops" role="menuitem">Workshops &amp; Seminars</a>
     <a href="#certs" role="menuitem">Certifications</a>
     <a href="#awards" role="menuitem">Grants &amp; Awards</a>
